--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.12.7"
+    "@portabletext/to-html": "^2.0.14",
+    "@sanity/client": "^7.8.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.12.7",
+    "tailwindcss": "^4.1.11",
+    "typed.js": "^2.1.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
