--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@sanity/client": "^7.8.1",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.7",
-    "tailwindcss": "^4.1.11",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "tailwindcss": "^3.4.17"
   }
 }
